argocd/charts/moodle/mariadb.yaml
# PV MariaDB
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mariadb
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mariadb
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      containers:
      - name: mariadb
        image: bitnami/mariadb:latest
        volumeMounts:
        - name: mariadb-storage
          mountPath: /bitnami/mariadb
      volumes:
      - name: mariadb-storage
        persistentVolumeClaim:
          claimName: mariadb-pvc

# Service MariaDB
---
apiVersion: v1
kind: Service
metadata:
  name: mariadb
  namespace: dev
spec:
  type: NodePort
  ports:
  - port: 3306
    targetPort: 3306
    nodePort: 30001
  selector:
    app: mariadb
