argocd/charts/moodle/moodle.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moodle
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
        app.kubernetes.io/name: moodle
        app.kubernetes.io/part-of: moodle
        app.kubernetes.io/instance: n7
  revisionHistoryLimit: 15
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  template:
    metadata:
      labels:
        app.kubernetes.io/name: moodle
        app.kubernetes.io/part-of: moodle
        app.kubernetes.io/instance: n7
    spec:
      terminationGracePeriodSeconds: 60
      containers:
      - name: moodle
        image: bitnamilegacy/moodle
        imagePullPolicy: IfNotPresent
        securityContext:
          allowPrivilegeEscalation: false
          privileged: false
        ports:
        - containerPort: 8080
        - containerPort: 8443
        volumeMounts:
        - name: moodle-storage
          mountPath: /bitnami/moodle
        livenessProbe:
          httpGet:
            scheme: HTTPS
            path: /
            port: 8443
          initialDelaySeconds: 120
          periodSeconds: 10
        readinessProbe:
          exec:
            command:
              - /bin/sh
              - -c
              - /opt/bitnami/php/bin/php /opt/bitnami/moodle/admin/cli/cron.php --help
          initialDelaySeconds: 30
          periodSeconds: 10
        resources:
          requests:
            cpu: "250m"
            memory: "512Mi"
          limits:
            cpu: "500m"
            memory: "1Gi"
      volumes:
      - name: moodle-storage
        persistentVolumeClaim:
          claimName: moodle-pvc

# Service Moodle
---
apiVersion: v1
kind: Service
metadata:
  name: moodle
  namespace: dev
spec:
  type: NodePort
  ports:
  - name: https
    port: 8443
    targetPort: 8443
    nodePort: 30003
  selector:
    app.kubernetes.io/name: moodle
