argocd/charts/moodle/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: moodle-route
  namespace: moodle
spec:
  parentRefs:
    - name: main-gateway
      namespace: gatewayapi
  hostnames:
    - moodle.h.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: moodle
          port: 80
